@@ -199,6 +199,12 @@ enum ECTagNames {
 		EC_TAG_CLIENT_UP_SPEED                    = 0x060D,
 		EC_TAG_CLIENT_DOWN_SPEED                  = 0x060E,
 		EC_TAG_CLIENT_FROM                        = 0x060F,
+		EC_TAG_CLIENT_USER_IP                     = 0x0610,
+		EC_TAG_CLIENT_USER_PORT                   = 0x0611,
+		EC_TAG_CLIENT_SERVER_IP                   = 0x0612,
+		EC_TAG_CLIENT_SERVER_PORT                 = 0x0613,
+		EC_TAG_CLIENT_SERVER_NAME                 = 0x0614,
+		EC_TAG_CLIENT_SOFT_VER_STR                = 0x0615,
 	EC_TAG_SEARCHFILE                         = 0x0700,
 		EC_TAG_SEARCH_TYPE                        = 0x0701,
 		EC_TAG_SEARCH_NAME                        = 0x0702,
